add the function fabu

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=8088
+GitHub.client.id=Iv1.282f9fa17f8e7829
+GitHub.redirect.uri=http://localhost:8088/callback
+GitHub.client.secret=bb238a66a295a8268461501ec8163338651e7cd7
+spring.datasource.url=jdbc:h2:~/communityDemo
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
